fix(browser-extension): visibility property too common was override in some scenarios

--- a/packages/browser-extension/src/styles/extension.css
+++ b/packages/browser-extension/src/styles/extension.css
@@ -1,3 +1,3 @@
 *[data-cookie-dialog-monster='true'] {
-  visibility: hidden !important;
+  clip-path: circle(0px) !important;
 }
